1.2.2:
    Core:
    * Added $HOSTURL$ and $SERVICEURL$ to notification macros which contain an
      URL to the host/service details views with /check_mk/... as base.

    Multisite:
    * FIX: Fixed umlaut handling in reloaded snapins

1.2.2b7:
    Checks & Agents:
    * FIX: postfix_mailq: fix labels in WATO rule, set correct default levels
    
    WATO:
    * FIX: syntax error in check_parameters

1.2.2b6:
    Core:
    * FIX: setup: detect check_icmp also on 64-Bit CentOS
           (thanks to あきら) 
    * FIX: setup.sh: create auth.serials, fix permissions of htpasswd
    * FIX: livecheck: now able to handle check output up to 16kB

    Checks & Agents:
    * FIX: apc_symmetra_power: resurrect garble PNP template for 
    * FIX: check_mk_agent.freebsd: remove garble from output
           (Thanks to Mathias Decker)
    * FIX: check_mk-mssql_counters.locks: fix computation, was altogether wrong
    * FIX: check_mk-mssql_counters.transactions: fix computation also
    * check_http: now support the option -L (urlizing the result)
    * Added mem section to Mac OSX agent (Thanks to Brad Davis)
    * FIX: mssql.vbs (agent plugin) now sets auth options for each instance
    * FIX: jolokia_metrics.mem: error when missing max values
    * Make levels for SMART temperature editable via WATO

    Multisite:
    * FIX: fix localization in non-OMD environment
           (thanks to あきら)
    * FIX: hopefully fix computation of Speed-O-Meter
    * Add $SERVICEOUTPUT$ and $HOSTOUTPUT$ to allowed macros for
      custom notes
    * FIX: Writing one clean message to webserver error_log when write fails
    * FIX: Escaping html entities when displaying comment fields
    * FIX: Monitored on site attribute always has valid default value

    Notifications:
    * FIX: fix event type for recoveries
    * FIX: fix custom notifications on older nagios versions
    * FIX: handle case where type HOST/SERVICE not correctly detected
    
    Livestatus: